# Universal-CICD-Piper

./: .gitignore  README.md  deps.py  pyproject.toml
src/Piper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pipelineiq/: __init__.py  deps.py  detect.py  report.py
src/pipelineiq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/piper/: cli.py  detect.py  tests.py  workflow.py
