[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Piper"
version = "0.1.0"
description = "Intelligent CI/CD with auto-detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "pyyaml>=6.0",
  "tomli>=2.0; python_version<'3.11'",
  "tomli-w>=1.0",
  "jinja2>=3.1",
  "pathspec>=0.12",
]

[project.scripts]
Piper = "Piper.cli:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
